--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -150,25 +150,17 @@
     <Compile Include="Loaders\TestXmlUIFormTabLoader.cs" />
     <Compile Include="Loaders\TestXmlUIGridDefLoader.cs" />
     <Compile Include="Loaders\TestXmlUIGridPropertyLoader.cs" />
+    <Compile Include="TestBOCollectionDataProvider.cs" />
+    <Compile Include="TestBOCollectionEditableDataProvider.cs" />
+    <Compile Include="TestBOCollectionReadOnlyDataSetProvider.cs" />
     <Compile Include="TestBoKey.cs" />
     <Compile Include="TestBoMapper.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="TestBoProp.cs" />
     <Compile Include="TestBoPropCol.cs" />
-    <Compile Include="TestBusinessObjectBase.cs">
-      <SubType>Code</SubType>
-    </Compile>
+    <Compile Include="TestBusinessObject.cs" />
     <Compile Include="TestBusinessObjectCollection.cs" />
-    <Compile Include="TestBusinessObjectCollectionDataProvider.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="TestBusinessObjectCollectionEditableDataProvider.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="TestBusinessObjectCollectionReadOnlyDataSetProvider.cs">
-      <SubType>Code</SubType>
-    </Compile>
     <Compile Include="TestBusinessObjectLookupList.cs" />
     <Compile Include="TestClassDef.cs">
       <SubType>Code</SubType>
