--- a/source/Habanero.UI/Habanero.UI.csproj
+++ b/source/Habanero.UI/Habanero.UI.csproj
@@ -98,6 +98,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\ControlsHelper.cs" />
     <Compile Include="Util\DialogUtilities.cs" />
   </ItemGroup>
   <ItemGroup>
