Added length attribute to property for strings. Added GetBusinessObjectByID methods with 4 overloads. Added additional StringUtilities methods. Restructured inheritance (still to fix mixed inheritance in one heirarchy):  - allow no primary key when superclass exists  - SingleTableInheritance requires discriminator attribute  - ClassTableInheritance allows three forms of primary key structures, using id attribute  - Tests added to check actual database operations on all inheritance forms (db changed)

--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -328,6 +328,7 @@
     <Compile Include="SingleRelationship.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="SqlGeneration\DeleteStatementGenerator.cs" />
     <Compile Include="SqlGeneration\InsertStatementGenerator.cs" />
     <Compile Include="SqlGeneration\SelectStatementGenerator.cs" />
     <Compile Include="SqlGeneration\UpdateStatementGenerator.cs" />
