--- a/source/Habanero.Test.General/Habanero.Test.General.csproj
+++ b/source/Habanero.Test.General/Habanero.Test.General.csproj
@@ -122,6 +122,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Address.cs" />
+    <Compile Include="CircleNoPrimaryKey.cs" />
+    <Compile Include="TestInheritanceHeirarchySingleClass.cs" />
+    <Compile Include="FilledCircleInheritsCircleNoPK.cs" />
+    <Compile Include="FilledCircleNoPrimaryKey.cs" />
+    <Compile Include="TestInheritanceClassTableNoID.cs" />
+    <Compile Include="TestInheritanceClassTableCopyID.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
