Added Utilities class with a IsNull method. Used new IsNull method in the == overload for BOKey (replaces try - catch). Added better error handling to BOMapper.

--- a/source/Habanero.Util/Habanero.Util.csproj
+++ b/source/Habanero.Util/Habanero.Util.csproj
@@ -141,6 +141,7 @@
     <Compile Include="File\TypeLoader.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Utilities.cs" />
     <Compile Include="XmlDocumentValidator.cs">
       <SubType>Code</SubType>
     </Compile>
