Added tests and fix for single table inheritance heirarchies (only known heirarchy that doesn't work is A,B,C where B from A with classTI and C from B with singleTI)

--- a/source/Habanero.Test.General/Habanero.Test.General.csproj
+++ b/source/Habanero.Test.General/Habanero.Test.General.csproj
@@ -123,6 +123,8 @@
   <ItemGroup>
     <Compile Include="Address.cs" />
     <Compile Include="CircleNoPrimaryKey.cs" />
+    <Compile Include="FilledCircleNoPrimaryKeyInheritsCircle.cs" />
+    <Compile Include="TestInheritanceHeirarchyClassSingle.cs" />
     <Compile Include="TestInheritanceHeirarchySingleClass.cs" />
     <Compile Include="FilledCircleInheritsCircleNoPK.cs" />
     <Compile Include="FilledCircleNoPrimaryKey.cs" />
