UIGrid: new sortColumn attribute EditableGrid:  - ComboBoxClickOnce allows one click to open combobox (default on)  - new CompulsoryColumnsBold (default on)  - enabled sorting on all column types Additional StringUtilities

--- a/source/Habanero.Test.Db/Habanero.Test.Db.csproj
+++ b/source/Habanero.Test.Db/Habanero.Test.Db.csproj
@@ -159,7 +159,6 @@
   <PropertyGroup>
     <PreBuildEvent>
     </PreBuildEvent>
-    <PostBuildEvent>rem copy "$(SolutionDir)\lib\MySql.Data.dll"  "$(TargetDir)"
-"$(SolutionDir)PostBuild.cmd" "$(SolutionDir)"  "$(TargetDir)"</PostBuildEvent>
+    <PostBuildEvent>"$(SolutionDir)PostBuild.cmd" "$(SolutionDir)"  "$(TargetDir)"</PostBuildEvent>
   </PropertyGroup>
 </Project>
