Imported the wizard functionality from projects into Habanero.  Includes IWizardStep, IWizardController, WizardControl, WizardForm and WizardStepException Created a new class called WizardController as a default implementation of IWizardController Also imported a couple convenience classes for wizards such as NullWizardStep and MessageWizardStep Added comments to all wizard classes.

--- a/source/Habanero.Test.UI.Pro/Habanero.Test.UI.Pro.csproj
+++ b/source/Habanero.Test.UI.Pro/Habanero.Test.UI.Pro.csproj
@@ -78,7 +78,6 @@
     <Compile Include="Grid\TestFilterControl.cs" />
     <Compile Include="Grid\TestFilterInputBoxCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Util\TestWizard.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="key.snk" />
@@ -115,6 +114,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Base\" />
+    <Folder Include="Util\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
