--- a/source/Habanero.Test.UI/Habanero.Test.UI.csproj
+++ b/source/Habanero.Test.UI/Habanero.Test.UI.csproj
@@ -39,6 +39,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\nunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="Rhino.Mocks, Version=3.2.0.781, Culture=neutral, PublicKeyToken=0b3305902db7183f, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\Rhino.Mocks.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -58,6 +62,9 @@
     <Compile Include="Grid\TestDataViewFilterClauseFactoryWithStrings.cs" />
     <Compile Include="Grid\TestReadOnlyGrid.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Wizard\TestWizardControl.cs" />
+    <Compile Include="Wizard\TestWizardController.cs" />
+    <Compile Include="Wizard\TestWizardForm.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Habanero.Bo\Habanero.BO.csproj">
