Added new UISettings class to enable application-wide UI settings. Specific use is for right-clicking a combobox to add options.  Can now disable it flexibly using: GlobalRegistry.UISettings.PermitComboBoxRightClick += delegate(Type boType, ComboBox comboBox) { return some boolean depending on the args, or just return false; };

--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -95,6 +95,7 @@
     <Compile Include="IApplicationVersionUpgrader.cs" />
     <Compile Include="ISupportsAutoIncrementingField.cs" />
     <Compile Include="ITransactionCommitter.cs" />
+    <Compile Include="IUISettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
