--- a/source/Habanero.UI/Habanero.UI.csproj
+++ b/source/Habanero.UI/Habanero.UI.csproj
@@ -47,12 +47,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Base\GlobalUIRegistry.cs" />
     <Compile Include="Base\HabaneroAppForm.cs" />
     <Compile Include="Base\BorderLayoutManager.cs" />
     <Compile Include="Base\ControlFactory.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Base\IBusinessObjectControl.cs" />
+    <Compile Include="Base\IControlMapper.cs" />
+    <Compile Include="Base\IUISettings.cs" />
     <Compile Include="Base\UISettings.cs" />
     <Compile Include="Forms\ButtonControl.cs">
       <SubType>UserControl</SubType>
