Changed date formatting in grids.  Now checks (in priority order):  - the dateFormat in the classDef column parameter  - the GlobalUIRegistry.DateDisplaySettings.GridDateFormat  - the short date property of the user's environment Error messages now contain the label/heading of the property rather than the property name, so if the label for ComputerPartID is "Comp Part" they see that in the error message rather than "ComputerPartID". Now support "alignment" attribute on field parameter.

--- a/source/Habanero.Test.UI/Habanero.Test.UI.csproj
+++ b/source/Habanero.Test.UI/Habanero.Test.UI.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Base\TestControlCollection.cs" />
     <Compile Include="Base\TestControlFactory.cs" />
     <Compile Include="Base\TestFlowLayoutManager.cs" />
+    <Compile Include="Base\TestGlobalUIRegistry.cs" />
     <Compile Include="Base\TestGridLayoutManager.cs" />
     <Compile Include="Base\TestLayoutManager.cs" />
     <Compile Include="Forms\TestButtonControl.cs" />
