Created a Combo Box controller that sets up the right click popup behaviour. Changed the implementation of the popup to use IObjectCreator, IObjectInitialiser, and IObjectEditor. Added the ability to set the name of the UI Def to use for the popup form. Changed the implementation of the LookupComboBoxMapper and the CollectionComboBoxMapper to use the ComboBoxRightClickController. Added error handling to the 'Next' / 'Finish' step in the Wizard Control. Added a contains method to the UIDefCol. Fixed a bug in the adding of the new item to the combo box after it is created using the popup.

--- a/source/Habanero.UI.Pro/Habanero.UI.Pro.csproj
+++ b/source/Habanero.UI.Pro/Habanero.UI.Pro.csproj
@@ -57,6 +57,7 @@
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Forms\ComboBoxMapper.cs" />
+    <Compile Include="Forms\ComboBoxRightClickController.cs" />
     <Compile Include="Forms\ControlMapper.cs" />
     <Compile Include="Forms\ControlMapperCollection.cs" />
     <Compile Include="Forms\DateRangeComboBox.cs">
