Added backtick (`) to MySQL delimiters. Put delimiters wherever possible, including table names, criteria clauses and column names like discriminator.  Created a centralised SqlGenerationHelper to do this. Changed parameter of SqlStatement constructor. Fixed support for integer primary keys, especially with lookup lists. Added integer indexer on BOKey. Changed some tests (ContactPerson tests) to reload the test data and not rely on existing data in the table.
STILL WORKING ON:
To solve issue with editing composite primary keys not updating grid.
To change table name/discriminator/field name/etc in DTD to CDATA.

--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -331,6 +331,7 @@
     <Compile Include="SqlGeneration\DeleteStatementGenerator.cs" />
     <Compile Include="SqlGeneration\InsertStatementGenerator.cs" />
     <Compile Include="SqlGeneration\SelectStatementGenerator.cs" />
+    <Compile Include="SqlGeneration\SqlGenerationHelper.cs" />
     <Compile Include="SqlGeneration\UpdateStatementGenerator.cs" />
     <Compile Include="SupportsAutoIncrementingFieldBO.cs" />
     <Compile Include="Transaction.cs">
