Changed table attribute to CDATA. Further improvements to correct composite keys in grids problem (not finished fixing yet), including new ValueBeforeLastEdit property on BOProp, Updated event on BOKey, new BOKeyEventArgs and fix on BusinessObjectCollection to update LookupTable when the key is updated.

--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Comparer\SingleComparer.cs" />
     <Compile Include="Comparer\StringComparer.cs" />
     <Compile Include="Comparer\TimeSpanComparer.cs" />
+    <Compile Include="BOKeyEventArgs.cs" />
     <Compile Include="CriteriaManager\SQLCriteriaCreator.cs" />
     <Compile Include="DeleteHelper.cs" />
     <Compile Include="IBusinessObjectCollection.cs" />
