HabaneroApp: removed unused ClassDefsPath. Further improvements to fix composite keys in grids problem, but not finished yet. BOCol: added RestoreAll. IBOCol: copied across some more methods. DTDs for superclass and class: fixed attributes to allow spaces. Added OrderItem test BO: using new style - create the database at runtime and delete it when done.  (see TestBOCollectionReadOnlyDataSetProvider for example usage)

--- a/source/Habanero.Test/Habanero.Test.csproj
+++ b/source/Habanero.Test/Habanero.Test.csproj
@@ -61,6 +61,7 @@
     <Compile Include="ColContactPeople.cs" />
     <Compile Include="ContactPerson.cs" />
     <Compile Include="ContactPersonCompositeKey.cs" />
+    <Compile Include="OrderItem.cs" />
     <Compile Include="Engine.cs" />
     <Compile Include="FilledCircle.cs" />
     <Compile Include="FilledCircleInheritsCircleNoPK.cs" />
