--- a/source/Habanero.UI.Pro/Habanero.UI.Pro.csproj
+++ b/source/Habanero.UI.Pro/Habanero.UI.Pro.csproj
@@ -149,6 +149,10 @@
       <DependentUpon>DbConnectionControl.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\DefaultBOEditorForm.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>DefaultBOEditorForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\MultiSelector.resx">
       <DependentUpon>MultiSelector.cs</DependentUpon>
       <SubType>Designer</SubType>
